# Data-Handler

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: datasources.yaml  kaggle.yaml
core/exceptions/: ingestion_error.py  storage_error.py
core/models/: datasource.py  ingestion_job.py
core/utils/: file_utils.py  retry.py  validation.py
infrastructure/db/: metadata_store.py
infrastructure/logging/: logger.py
infrastructure/minio/: __init__.py  buckets.py  client.py  downloader.py  uploader.py
infrastructure/scheduler/: cron.py
ingestion/: registry.py
ingestion/api/: __init__.py  auth.py  rest_downloader.py
ingestion/arxiv/: downloader.py
ingestion/kaggle/: __init__.py  client.py  downloader.py  helpers.py
ingestion/pipelines/: arxiv_pipeline.py  base_pipeline.py  kaggle_pipeline.py
ingestion/python_download/: __init__.py  downloader.py  helpers.py
ingestion/s3/: __init__.py  client.py  helpers.py  syncer.py
ingestion/web/: __init__.py  crawler.py  parser.py  scraper.py
notebooks/: pdf_ingestion.ipynb
scripts/: run_ingestion.py
services/: job_runner.py  orchestrator.py
